# devenv

./: .editorconfig  .gitignore  .ideavimrc  .zshrc  COMMAND_MIGRATION_PLAN.md  COMMAND_PALETTE_DI_MIGRATION_PLAN.md  Cargo.toml  Justfile  Makefile  PLAN_1_WORKTREE_START_WINDOWS.md  PLAN_2_TMUX_SWITCH_TESTS.md  PLAN_3_WORKTREE_TMUX_SWITCH.md  README.md  REFACTORING_PLAN.md  SHAKU_MIGRATION_PLAN.md  TEST_DESCRIPTORS_PLAN.md  TUI_TEST_PLAN.md  WORKTREE_PALETTE_PLAN.md  command_palette_plan.md  command_palette_tests.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  testing_infrastructure_plan.md  turbo.json
apps/cli/: .dockerignore  Cargo.toml  Dockerfile  README.md  TESTING.md  package.json
apps/cli/.github/workflows/: build.yaml
apps/cli/examples/: config_3.json
apps/cli/schemas/: config-schema.json
apps/cli/src/: main.rs
apps/cli/src/command_palette/: mod.rs  tui.rs
apps/cli/src/commands/: command.rs  command_ctx.rs  command_palette.rs  mod.rs  registry.rs
apps/cli/tests/: add_workspace_command_tests.rs  cli_command_builder_tests.rs  cli_integration_tests.rs  command_palette_additional_tests.rs  config_file_tests.rs  config_flag_tests.rs  descriptor_tests.rs  display_format_tests.rs  edge_case_tests.rs  error_handling_tests.rs  integration_flow_tests.rs  picker_test_commands_tests.rs  rafaeltab_descriptor_tests.rs  tmux_list_tests.rs  tmux_start_tests.rs  tmux_switch_additional_tests.rs  tmux_switch_worktree_tests.rs  tui_command_palette_tests.rs  tui_tmux_switch_tests.rs  workspace_add_tests.rs  workspace_current_tests.rs  workspace_find_tag_tests.rs  workspace_find_tests.rs  workspace_list_tests.rs  workspace_tmux_tests.rs  worktree_complete_tests.rs  worktree_start_additional_tests.rs  worktree_start_windows_tests.rs
(+403 files in other folders)
