[package]
name = "rafaeltab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
duct = "0.13.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3.1.0"
