[package]
name = "rafaeltab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = "0.4.41"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.4"
crossterm = "0.29.0"
duct = "0.13.7"
fuzzy-matcher = "0.3.7"
glob = "0.3"
inquire = "0.7.5"
itertools = "0.14.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3.1.0"
uuid = { version = "1.8.0", features = ["v4", "v5"] }
sublime_fuzzy = "0.7"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3"
test-descriptors = { path = "../../packages/test-descriptors" }
test-utils = { path = "../../packages/test-utils" }
